[gd_scene load_steps=2 format=1]

[ext_resource path="res://data_router/data_router.gd" type="Script" id=1]

[node name="data_router" type="Node"]

script/script = ExtResource( 1 )

[node name="input_ports" type="Node" parent="."]

[node name="output_ports" type="Node" parent="."]

[node name="connections" type="Node" parent="."]


